@@ -3,6 +3,7 @@
         * src/lib/chess/board.py: Fix castling regression (Bug #516459)
 	* src/lib/config.py: Catch GError exceptions from GConf (Bug #489878)
 	* src/lib/scene/cairo/__init__.py: Pixel align the board (Bug #443451)
+	* src/lib/display.py: Fix wrong player moving when changing to 3D mode (Bug #516818)
 
 2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
 
